crates/zuno-tui/src/snapshots/zuno_tui__theme__tests__orng.snap
---
source: crates/zuno-tui/src/theme_tests.rs
expression: "theme_sample(&registry, name, Mode::Dark)"
---
"orng                      " fg=#eeeeee bg=#0a0a0a mod=BOLD
"primary                   " fg=#ec5b2b bg=#0a0a0a mod=NONE
"secondary                 " fg=#ee7948 bg=#0a0a0a mod=NONE
"accent                    " fg=#fff7f1 bg=#0a0a0a mod=NONE
"error                     " fg=#e06c75 bg=#0a0a0a mod=NONE
"warning                   " fg=#ec5b2b bg=#0a0a0a mod=NONE
"success                   " fg=#6ba1e6 bg=#0a0a0a mod=NONE
"info                      " fg=#56b6c2 bg=#0a0a0a mod=NONE
"text                      " fg=#eeeeee bg=#0a0a0a mod=NONE
"textMuted                 " fg=#808080 bg=#0a0a0a mod=NONE
"background                " fg=#0a0a0a bg=#0a0a0a mod=NONE
"backgroundPanel           " fg=#141414 bg=#0a0a0a mod=NONE
"backgroundElement         " fg=#1e1e1e bg=#0a0a0a mod=NONE
"border                    " fg=#ec5b2b bg=#0a0a0a mod=NONE
"borderActive              " fg=#ee7948 bg=#0a0a0a mod=NONE
"borderSubtle              " fg=#3c3c3c bg=#0a0a0a mod=NONE
"diffAdded                 " fg=#6ba1e6 bg=#0a0a0a mod=NONE
"diffRemoved               " fg=#c53b53 bg=#0a0a0a mod=NONE
"diffContext               " fg=#828bb8 bg=#0a0a0a mod=NONE
"diffHunkHeader            " fg=#828bb8 bg=#0a0a0a mod=NONE
"diffHighlightAdded        " fg=#6ba1e6 bg=#0a0a0a mod=NONE
"diffHighlightRemoved      " fg=#e26a75 bg=#0a0a0a mod=NONE
"diffAddedBg               " fg=#1a2a3d bg=#0a0a0a mod=NONE
"diffRemovedBg             " fg=#37222c bg=#0a0a0a mod=NONE
"diffContextBg             " fg=#141414 bg=#0a0a0a mod=NONE
"diffLineNumber            " fg=#828bb8 bg=#0a0a0a mod=NONE
"diffAddedLineNumberBg     " fg=#162535 bg=#0a0a0a mod=NONE
"diffRemovedLineNumberBg   " fg=#2d1f26 bg=#0a0a0a mod=NONE
"markdownText              " fg=#eeeeee bg=#0a0a0a mod=NONE
"markdownHeading           " fg=#ec5b2b bg=#0a0a0a mod=NONE
"markdownLink              " fg=#ec5b2b bg=#0a0a0a mod=NONE
"markdownLinkText          " fg=#56b6c2 bg=#0a0a0a mod=NONE
"markdownCode              " fg=#6ba1e6 bg=#0a0a0a mod=NONE
"markdownBlockQuote        " fg=#fff7f1 bg=#0a0a0a mod=NONE
"markdownEmph              " fg=#e5c07b bg=#0a0a0a mod=NONE
"markdownStrong            " fg=#ee7948 bg=#0a0a0a mod=NONE
"markdownHorizontalRule    " fg=#808080 bg=#0a0a0a mod=NONE
"markdownListItem          " fg=#ec5b2b bg=#0a0a0a mod=NONE
"markdownListEnumeration   " fg=#56b6c2 bg=#0a0a0a mod=NONE
"markdownImage             " fg=#ec5b2b bg=#0a0a0a mod=NONE
"markdownImageText         " fg=#56b6c2 bg=#0a0a0a mod=NONE
"markdownCodeBlock         " fg=#eeeeee bg=#0a0a0a mod=NONE
"syntaxComment             " fg=#808080 bg=#0a0a0a mod=NONE
"syntaxKeyword             " fg=#ec5b2b bg=#0a0a0a mod=NONE
"syntaxFunction            " fg=#ee7948 bg=#0a0a0a mod=NONE
"syntaxVariable            " fg=#e06c75 bg=#0a0a0a mod=NONE
"syntaxString              " fg=#6ba1e6 bg=#0a0a0a mod=NONE
"syntaxNumber              " fg=#fff7f1 bg=#0a0a0a mod=NONE
"syntaxType                " fg=#e5c07b bg=#0a0a0a mod=NONE
"syntaxOperator            " fg=#56b6c2 bg=#0a0a0a mod=NONE
"syntaxPunctuation         " fg=#eeeeee bg=#0a0a0a mod=NONE
"selectedListItemText      " fg=#0a0a0a bg=#0a0a0a mod=NONE
"backgroundMenu            " fg=#1e1e1e bg=#0a0a0a mod=NONE
"thinkingOpacity 0.60      " fg=#808080 bg=#0a0a0a mod=NONE
"selectedForeground        " fg=#0a0a0a bg=#ec5b2b mod=NONE
