crates/zuno-tui/src/snapshots/zuno_tui__theme__tests__system.snap
---
source: crates/zuno-tui/src/theme_tests.rs
expression: "theme_sample(&registry, name, Mode::Dark)"
---
"system                    " fg=#e6e6e6 bg=reset mod=BOLD
"primary                   " fg=#00ffff bg=reset mod=NONE
"secondary                 " fg=#ff00ff bg=reset mod=NONE
"accent                    " fg=#00ffff bg=reset mod=NONE
"error                     " fg=#ff0000 bg=reset mod=NONE
"warning                   " fg=#ffff00 bg=reset mod=NONE
"success                   " fg=#00ff00 bg=reset mod=NONE
"info                      " fg=#00ffff bg=reset mod=NONE
"text                      " fg=#e6e6e6 bg=reset mod=NONE
"textMuted                 " fg=#9a9a9a bg=reset mod=NONE
"background                " fg=reset bg=reset mod=NONE
"backgroundPanel           " fg=#242830 bg=reset mod=NONE
"backgroundElement         " fg=#3a414c bg=reset mod=NONE
"border                    " fg=#4d4d4d bg=reset mod=NONE
"borderActive              " fg=#7a7a7a bg=reset mod=NONE
"borderSubtle              " fg=#303030 bg=reset mod=NONE
"diffAdded                 " fg=#00ff00 bg=reset mod=NONE
"diffRemoved               " fg=#ff0000 bg=reset mod=NONE
"diffContext               " fg=#9a9a9a bg=reset mod=NONE
"diffHunkHeader            " fg=#9a9a9a bg=reset mod=NONE
"diffHighlightAdded        " fg=#00ff00 bg=reset mod=NONE
"diffHighlightRemoved      " fg=#ff0000 bg=reset mod=NONE
"diffAddedBg               " fg=#12261a bg=reset mod=NONE
"diffRemovedBg             " fg=#2a1416 bg=reset mod=NONE
"diffContextBg             " fg=#242830 bg=reset mod=NONE
"diffLineNumber            " fg=#9a9a9a bg=reset mod=NONE
"diffAddedLineNumberBg     " fg=#1a3324 bg=reset mod=NONE
"diffRemovedLineNumberBg   " fg=#3a1c1f bg=reset mod=NONE
"markdownText              " fg=#e6e6e6 bg=reset mod=NONE
"markdownHeading           " fg=#e6e6e6 bg=reset mod=NONE
"markdownLink              " fg=#00ffff bg=reset mod=NONE
"markdownLinkText          " fg=#00ffff bg=reset mod=NONE
"markdownCode              " fg=#00ff00 bg=reset mod=NONE
"markdownBlockQuote        " fg=#ffff00 bg=reset mod=NONE
"markdownEmph              " fg=#ffff00 bg=reset mod=NONE
"markdownStrong            " fg=#e6e6e6 bg=reset mod=NONE
"markdownHorizontalRule    " fg=#4d4d4d bg=reset mod=NONE
"markdownListItem          " fg=#00ffff bg=reset mod=NONE
"markdownListEnumeration   " fg=#00ffff bg=reset mod=NONE
"markdownImage             " fg=#00ffff bg=reset mod=NONE
"markdownImageText         " fg=#00ffff bg=reset mod=NONE
"markdownCodeBlock         " fg=#e6e6e6 bg=reset mod=NONE
"syntaxComment             " fg=#9a9a9a bg=reset mod=NONE
"syntaxKeyword             " fg=#ff00ff bg=reset mod=NONE
"syntaxFunction            " fg=#00ffff bg=reset mod=NONE
"syntaxVariable            " fg=#e6e6e6 bg=reset mod=NONE
"syntaxString              " fg=#00ff00 bg=reset mod=NONE
"syntaxNumber              " fg=#ffff00 bg=reset mod=NONE
"syntaxType                " fg=#00ffff bg=reset mod=NONE
"syntaxOperator            " fg=#00ffff bg=reset mod=NONE
"syntaxPunctuation         " fg=#e6e6e6 bg=reset mod=NONE
"selectedListItemText      " fg=#0d0d0d bg=reset mod=NONE
"backgroundMenu            " fg=#3a414c bg=reset mod=NONE
"thinkingOpacity 0.60      " fg=#9a9a9a bg=reset mod=NONE
"selectedForeground        " fg=#0d0d0d bg=#00ffff mod=NONE
